objects/Partners__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Amount_Average__c</fullName>
        <label>Bill Amount Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Frequency__c</fullName>
        <label>Bill Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Occasionally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Partners</relationshipLabel>
        <relationshipName>Partners1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Partner__c</fullName>
        <label>Parent Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartnerExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PartnerExternalID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Amount_Average__c</fullName>
        <label>Payment Amount Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Occasionally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_of_Ownership__c</fullName>
        <label>Percentage of Ownership</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reverse_Role__c</fullName>
        <label>Reverse Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Leasee</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Owned Corporate</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Security Client</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>LE Owner</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                    <isActive>false</isActive>
                    <label>Location</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner</label>
    <nameField>
        <displayFormat>P-{0}</displayFormat>
        <label>Partner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>